[PM2-23] Fix loading mess on rotation.